<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_profit_margin"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profitMarginActualPrice"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#c0c0c0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/plusBox"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_edit_box"
            android:hint="@string/plus"
            android:inputType="number"
            android:maxLength="4"
            android:padding="10dp" />

        <EditText
            android:id="@+id/percentageBox"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_edit_box"
            android:hint="@string/percent"
            android:inputType="number"
            android:maxLength="2"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/round_edit_box"
            android:focusable="false"
            android:padding="10dp"
            android:text="@string/equal" />

        <TextView
            android:id="@+id/profitMarginTotalPrice"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/round_edit_box"
            android:focusable="false"
            android:padding="10dp" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#c0c0c0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profitMarginCancel"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/cancel"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/profitMarginOk"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/done"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>