<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rhalwai.velenton.SubProductActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_blue_light"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:padding="10dp"
                    android:text="@string/product_description"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/copyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:contentDescription="@string/copy_text"
                    android:padding="5dp"
                    android:src="@drawable/copy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/shareCatalog"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/round_edit_box"
                    android:drawableLeft="@drawable/whatsapp"
                    android:drawableStart="@drawable/whatsapp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/share_catalog"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/background_dark" />

                <Button
                    android:id="@+id/otherShare"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/round_edit_box"
                    android:text="@string/other_share"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/background_dark" />

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
