<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/subProductImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sub_product_description"
                android:padding="4dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/subProductCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/subProductSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subProductCode"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/subProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subProductSize"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subProductPrice"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/subProductViewProduct"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/round_edit_box"
                        android:text="@string/view_product"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/background_dark" />

                    <Button
                        android:id="@+id/subProductShare"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/round_edit_box"
                        android:drawableLeft="@drawable/whatsapp"
                        android:drawableStart="@drawable/whatsapp"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:text="@string/share"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@android:color/background_dark" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>