<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rhalwai.velenton.ProductPurchaseActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productCode"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/copy"
                        android:drawableRight="@drawable/copy"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/productDescription"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:ems="10"
                        android:padding="5dp"
                        android:text="@string/product_description" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/holo_blue_light"
                        android:drawableLeft="@drawable/avatar"
                        android:drawableStart="@drawable/avatar"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/supplier"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/velenton"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/productPrice"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:textColor="@android:color/holo_green_dark" />

                            <TextView
                                android:id="@+id/shippingPrice"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" />

                            <TextView
                                android:id="@+id/returnAccepted"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawableLeft="@drawable/checked"
                                android:drawableStart="@drawable/checked"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textAlignment="center"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/productAvailability"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" />

                            <TextView
                                android:id="@+id/dispatchTime"
                                style="@style/Base.TextAppearance.AppCompat.Small"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp" />

                            <TextView
                                android:id="@+id/cashOnDelivery"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawableLeft="@drawable/multiply"
                                android:drawableStart="@drawable/multiply"
                                android:gravity="center"
                                android:padding="5dp"
                                android:textAlignment="center"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/addToCart"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/round_edit_box"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/background_dark" />

                <Button
                    android:id="@+id/share"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/round_edit_box"
                    android:drawableLeft="@drawable/whatsapp"
                    android:drawableStart="@drawable/whatsapp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/background_dark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
